@@ -19,7 +19,6 @@ lib/NetPacket/IPX.pm
 lib/NetPacket/TCP.pm
 lib/NetPacket/UDP.pm
 lib/NetPacket/USBMon.pm
-netpacket-ipx.patch
 t/00-compile.t
 t/000-report-versions-tiny.t
 t/bug-37931.t
