@@ -10,6 +10,3 @@ copyright_holder = Tim Potter and Stephanie Wehner
 -remove = Test::UnusedVars
 -remove = Covenant
 
-[Encoding]
-encoding = latin-1
-match = META.json
